// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`labels the turn with GPICK 1`] = `
<Turn
  i18n={Object {}}
  t={[Function]}
  tReady={true}
  turn={
    Turn {
      "action": "PICK",
      "exclusivity": "GLOBAL",
      "hidden": false,
      "parallel": false,
      "player": "HOST",
    }
  }
  turnNumber={0}
/>
`;

exports[`labels the turn with PICK 1`] = `
<Turn
  i18n={Object {}}
  t={[Function]}
  tReady={true}
  turn={
    Turn {
      "action": "PICK",
      "exclusivity": "NONEXCLUSIVE",
      "hidden": false,
      "parallel": false,
      "player": "HOST",
    }
  }
  turnNumber={0}
/>
`;

exports[`labels the turn with xPICK 1`] = `
<Turn
  i18n={Object {}}
  t={[Function]}
  tReady={true}
  turn={
    Turn {
      "action": "PICK",
      "exclusivity": "EXCLUSIVE",
      "hidden": true,
      "parallel": false,
      "player": "HOST",
    }
  }
  turnNumber={0}
/>
`;
